Fixed alignment issue of keypad

--- a/style.css
+++ b/style.css
@@ -1,27 +1,53 @@
 .calci-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   width: 160px;
-  border: 1px solid green;
+  border: 2px solid green;
   background-color: azure;
   box-sizing: border-box;
   padding: 8px;
+  border-radius: 4px;
 }
 
-#calci-screen{
-    width: 100%;
-    height: 25px;
-    border: 1px solid black;
-    background-color: whitesmoke; 
-  
+#calci-screen {
+  width: 100%;
+  height: 25px;
+  border: 2px solid black;
+  border-radius: 4px;
+  background-color: whitesmoke;
 }
 
-.calci-number-row{
-  border: 1px solid black;
+.calci-number-row {
+  /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
-
 }
 
-#calci-number{
-  border: 1px solid black;
+#calci-number {
+  /* border: 1px solid black; */
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+#calci-num-op {
+  display: flex;
+  gap: 8px;
+}
+
+#calci-operation {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.calci-number-row > button {
+  width: 30px;
+}
+
+button {
+  border-radius: 4px;
+  border: 2px solid black;
 }
